Implement shell descriptor fetch API
